Fix bugs; infoaudio not playing in iphone, back-arrow not working on iphone. Styling for small devices. Alter title and favicon

--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -1,11 +1,11 @@
 .path {
   position: absolute;
   top: 14vh;
-  margin-left: 3vw;
+  padding-left: 5vw;
 }
 
 .box {
-  margin: 8px;
+  margin: 5px;
   border-width: 0px;
   background: rgba(255, 255, 255, 1);
 }
